trunk/tests/kiama/negative/name_errors/L2/7_forname3.ob
MODULE forname;

VAR
    bvar : INTEGER;

BEGIN
    FOR bvar := bvar2 * 3 TO 5 - avar DO
        bvar2 := bvar MOD 8;
    END
END forname.
